--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.75), rgba(0,0,0,0.75)),url(images/background.jpg);
+    background-image: linear-gradient(to bottom, rgba(26, 26, 26, 0.40), rgba(26, 26, 26, 0.40)),url(images/background.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
